Upated images and copy for both Stylefind sections

--- a/index.html
+++ b/index.html
@@ -81,23 +81,21 @@
             <div class="nav"></div>
           </div>
           <div class="description">
-            <div class="title">Stylefind iOS <span>- v1.0</span> WIP</div>
+            <div class="title">Stylefind <span>(iOS)</span> - WIP</div>
             <div class="info">
               <div id="prj11_s1_info" class="slide_info">
-                <em>"Find and buy items you love, quickly and easily."</em>
+                <em>"Find and buy the items that define you."</em>
                 <br><br>
                 <p>Stylefind is an app that enables people to find where to buy the items they love by submitting a images.</p>
                 <p>Using visual search and image recognition technology, Stylefind provides visually similar, purchaseable results to users based on the images they submit</p>
 
-                <a href="_img/stylefind_v2/stylefind_v2-sign_up_flow.png" title="Stylefind v1.0 Wireframes - Sign up flow" target="_blank">Wireframes - Sign up flow A</a>
+                Wireframes - Sign up flow <a href="_img/stylefind_v2/stylefind_v2-auth_flow1.png" title="Stylefind v1.0 Wireframes - Sign up flow 1" target="_blank">1</a>, <a href="_img/stylefind_v2/stylefind_v2-auth_flow2.png" title="Stylefind v1.0 Wireframes - Sign up flow 2" target="_blank">2</a>, and <a href="_img/stylefind_v2/stylefind_v2-sign_up_flow.png" title="Stylefind v1.0 Wireframes - Sign up flow 3" target="_blank">3</a>
                 <br>
-                <a href="_img/stylefind_v2/stylefind_v2-authentication_flow.png" title="Stylefind v1.0 Wireframes - Sign up flow" target="_blank">Wireframes - Sign up flow B</a>
+                Wireframes - <a href="_img/stylefind_v2/stylefind_v2-app_flow.png" title="Stylefind v1.0 Wireframe - App flow" target="_blank">App flow</a>
                 <br>
-                <a href="_img/stylefind_v2/stylefind_v2-app_flow.png" title="Stylefind v1.0 Wireframe - App flow" target="_blank">Wireframes - App flow</a>
+                Framer - <a href="_img/stylefind_v2/stylefind_v2-framer-signup.mp4" title="Stylefind v1.0 Framer - Sign up animations" target="_blank">Sign up animations</a>
                 <br>
-                <a href="_img/stylefind_v2/stylefind_v2-framer-signup.mp4" title="Stylefind v1.0 Framer - Sign up animations" target="_blank">Framer - Sign up animations</a>
-                <br>
-                <a href="_img/stylefind_v2/stylefind_v2-framer-results.mp4" title="Stylefind v1.0 Framer - Results animations" target="_blank">Framer - Results interactions</a>
+                Framer - <a href="_img/stylefind_v2/stylefind_v2-framer-results.mp4" title="Stylefind v1.0 Framer - Results animations" target="_blank">Results interactions</a>
               </div>
               <div id="prj11_s2_info" class="slide_info">
                 <strong>The Problem</strong><br><br>
@@ -145,22 +143,21 @@
                   <img src="_img/stylefind_v1/stylefindv1-02-results_s2.png" class="no-boxshadow" alt="Stylefind - Result view" />
                 </a>
               </li>
-
               <li>
-                <a href="_img/stylefind_v1/stylefind_03_card_input.png" class="img view" rel="project_10">
-                  <img src="_img/stylefind_v1/stylefind_03_card_input_s2.png" class="no-boxshadow" alt="Stylefind - Card input view" />
+                <a href="_img/stylefind_v1/stylefindv1-03-result.png" class="img view" rel="project_10">
+                  <img src="_img/stylefind_v1/stylefindv1-03-result_s2.png" class="no-boxshadow" alt="Stylefind - Result view" />
                 </a>
               </li>
               <li>
-                <a href="_img/stylefind_v1/stylefind_04_menu.png" class="img view" rel="project_10">
-                  <img src="_img/stylefind_v1/stylefind_04_menu_s2.png" class="no-boxshadow" alt="Stylefind - Menu view" />
+                <a href="_img/stylefind_v1/stylefindv1-04-safari.png" class="img view" rel="project_10">
+                  <img src="_img/stylefind_v1/stylefindv1-04-safari_s2.png" class="no-boxshadow" alt="Stylefind - Web view" />
                 </a>
               </li>
             </ul>
             <div class="nav"></div>
           </div>
           <div class="description">
-            <div class="title">Stylefind (iOS) <span>- v0.25</span></div>
+            <div class="title">Slyce Demo App <span>(iOS)<span></div>
             <div class="info">
               <div id="prj10_s1_info" class="slide_info">
                 <em>"Find and buy items you love, quickly and easily."</em>
@@ -182,7 +179,7 @@
               <div id="prj10_s4_info" class="slide_info">
                 <strong>Behind the Scenes</strong><br><br>
                 <p>I began by wireframing the required views for the app to outline the user's flow through the app. During this process it became clear that enabling people to filter results, or select a category before uploading their image, didn't address the goal of the project. While these features seemed to offer a better overall experience, neither helped to showcase the speed or accuracy of the results Slyce could procide.</p>
-                <a href="_img/stylefind_v1/stylefind_v1-flow.png" title="Stylefind v1.0 Wireframes" target="_blank">Wireframes</a>
+                Wireframes - <a href="_img/stylefind_v1/stylefind_v1-flow.png" title="Stylefind v1.0 Wireframes" target="_blank">Demo app flow</a>
               </div>
               <div id="prj10_s5_info" class="slide_info">
                 <strong>Solution</strong><br><br>
@@ -240,7 +237,7 @@
             <div class="nav"></div>
           </div>
           <div class="description">
-            <div class="title">Payments by Wave (iOS)</div>
+            <div class="title">Payments by Wave <span>(iOS)</span></div>
             <div class="info">
               <div id="prj9_s1_info" class="slide_info">
                 <em>"With Payments by Wave you can easily accept credit and cash payments on your iOS device and have each transaction flow seamlessly into Wave's small business cloud accounting app."</em>
@@ -394,7 +391,7 @@
             <div class="nav"></div>
           </div>
           <div class="description">
-            <div class="title">Receipts by Wave (Android)</div>
+            <div class="title">Receipts by Wave <span>(Android)</span></div>
             <div class="info">
               <div id="prj8_s1_info" class="slide_info">
                 <em>"With Receipts by Wave you can snap a photo of your receipt, verify the details and it connects seamlessly to your small biz accounting"</em>
@@ -485,7 +482,7 @@
             <div class="nav"></div>
           </div>
           <div class="description">
-            <div class="title">Receipts by Wave (iOS)</div>
+            <div class="title">Receipts by Wave <span>(iOS)</span></div>
             <div class="info">
               <div id="prj7_s1_info" class="slide_info">
                 <em>"With Receipts by Wave you can snap a photo of your receipt, verify the details and it connects seamlessly to your small biz accounting"</em>
@@ -573,7 +570,7 @@
             <div class="nav"></div>
           </div>
           <div class="description">
-            <div class="title">Payroll by Wave (iOS)</div>
+            <div class="title">Payroll by Wave <span>(iOS)</div>
             <div class="info">
               <div id="prj6_s1_info" class="slide_info">
                 <em>"Run payroll for your small business in less than a minute. Wave’s payroll tool is the easiest, most affordable way for small businesses to pay their employees."</em>
