--- a/stylefind.html
+++ b/stylefind.html
@@ -48,8 +48,8 @@
 
       <section class="title">
         <header>
-         <h1>Stylefind v1.0</h1>
-         <em>"Find and buy items you love, quickly and easily."</em>
+         <h1>The Stylefind story</h1>
+         <em>"Find and buy the items that define you."</em>
         </header>
       </section>
 
@@ -57,7 +57,7 @@
         <h3>Overview</h3>
         <p>Stylefind is an app for iOS that enables people to find where to buy the items they love by submitting an image.</p>
         <p>Stylefind uses visual search and image recognition technology to provide visually similar, purchaseable results to users based on the images they submit</p>
-        <p><a href="http://slyce.it" target="_blank" title="Open slyce.it in a new tab/window">Slyce Inc.</a> contracted me to design and build a consumer app that leverages their visual search technology. The goal was to create an app using APIs provided by Slyce that enabled users to get purchaseable results from the images they submitted. The app was to be used by Slyce during demonstrations to retailers and investors to showcase their technology.</p>
+
       </section>
       <hr>
       <section>
@@ -111,12 +111,6 @@
         <p>Aliquam sollicitudin nulla dui, ac lacinia leo interdum eget. In vel erat ut sem elementum porta ac et leo. Morbi leo diam, consectetur ut nibh vel, tincidunt elementum sapien. Nunc ac euismod dolor. Nam felis erat, egestas eu leo ultrices, lobortis tempor elit. Sed quis enim ante. Donec porttitor risus est, non sodales ligula porta sollicitudin. Vestibulum fringilla elit ipsum. Sed elit massa, fermentum quis est vitae, iaculis elementum urna. Cras id mollis dolor. In ultrices suscipit elementum. Sed gravida justo sit amet orci sodales, in vehicula urna ullamcorper.</p>
       </section>
       <hr>
-      <section>
-        <h3>Solution</h3>
-        <p>After a few iterations to tweak how we displayed feedback to the user when their image was uploading, how the results were displayed and how soon the user would be sent to the checkout webview (i.e. removing the result info view), we arrived at our finished product - the Stylefind prototype, so to speak.</p>
-        <p>The final app was such a hit with Slyce that we decided to spin it off into is own company to create a full consumer app experience that harnesses the power of Slyce.</p>
-      </section>
-      <hr>
       <section class="images iphone">
         <ul>
           <li>
@@ -145,6 +139,12 @@
             </a>
           </li>
         </ul>
+      </section>
+      <hr>
+      <section>
+        <h3>Solution</h3>
+        <p>After a few iterations to tweak how we displayed feedback to the user when their image was uploading, how the results were displayed and how soon the user would be sent to the checkout webview (i.e. removing the result info view), we arrived at our finished product - the Stylefind prototype, so to speak.</p>
+        <p>The final app was such a hit with Slyce that we decided to spin it off into is own company to create a full consumer app experience that harnesses the power of Slyce.</p>
       </section>
     </article>
   </div>
