Added framer movie for stylefind

--- a/stylefind.html
+++ b/stylefind.html
@@ -57,7 +57,13 @@
         <h3>Overview</h3>
         <p>Stylefind is an app for iOS that enables people to find where to buy the items they love by submitting an image.</p>
         <p>Stylefind uses visual search and image recognition technology to provide visually similar, purchaseable results to users based on the images they submit</p>
-
+      </section>
+      <hr>
+      <section>
+        <h3>Backstory</h3>
+        <p>I was contracted by <a href="http://slyce.it" target="_blank" title="Open slyce.it in a new tab/window">Slyce Inc.</a> to design and build a consumer app for iOS that leveraged their visual search technology.</p>
+        <p>The goal was to create an app that would showcase this technology in a very favorable light. Using the provided APIs, we needed to enable people to get purchaseable results from the images they submitted. Ultimately, the app would be used by Slyce to demonstrate to retailers and investors the power and accuracy of their visual search magic.</p>
+        <p></p>
       </section>
       <hr>
       <section>
