--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <p class="intro">Although this site is mobile optimized, I'd recommend viewing it on a desktop for the best experience.</p>
 
         <article class="cv">
-          <p>UX and Product Designer with 7+ years experience creating mobile and web apps. Currently, I'm the a co-founder of a (very) early stage company called <a href="http://stylefind.io/" target="_blank" title="Open stylefind.io in a new tab/window">Stylefind</a>. Previously I've worked at <a href="http://chaordix.com/" target="_blank" title="Open chaordix.com in a new tab/window">Chaordix</a> as a UX Designer & Product Manager, and <a href="http://waveapps.com/" target="_blank" title="Open waveapps.com in a new tab/window">Wave</a>, where I was the Product Designer & Manager of Mobile. I’m passionate about finding and solving problems by creating products that make a positive, lasting impact.</p>
+          <p>UX and Product Designer with 7+ years experience creating mobile and web apps. Currently, I'm a co-founder of a (very) early stage company called <a href="http://stylefind.io/" target="_blank" title="Open stylefind.io in a new tab/window">Stylefind</a>. Previously I've worked at <a href="http://chaordix.com/" target="_blank" title="Open chaordix.com in a new tab/window">Chaordix</a> as a UX Designer & Product Manager, and <a href="http://waveapps.com/" target="_blank" title="Open waveapps.com in a new tab/window">Wave</a>, where I was the Product Designer & Manager of Mobile. I’m passionate about finding and solving problems by creating products that make a positive, lasting impact.</p>
         </article>
 
         <article><!-- Stylefind v1.0 (iOS) -->
@@ -86,35 +86,36 @@
               <div id="prj11_s1_info" class="slide_info">
                 <em>"Find and buy the items that define you."</em>
                 <br><br>
-                <p>Stylefind is an app that enables people to find where to buy the items they love by submitting a images.</p>
+                <p>Stylefind is an app that enables people to find where to buy the items they love by submitting images.</p>
                 <p>Using visual search and image recognition technology, Stylefind provides visually similar, purchaseable results to users based on the images they submit</p>
 
                 Wireframes - Sign up flow <a href="_img/stylefind_v2/stylefind_v2-auth_flow1.png" title="Stylefind v1.0 Wireframes - Sign up flow 1" target="_blank">1</a>, <a href="_img/stylefind_v2/stylefind_v2-auth_flow2.png" title="Stylefind v1.0 Wireframes - Sign up flow 2" target="_blank">2</a>, and <a href="_img/stylefind_v2/stylefind_v2-sign_up_flow.png" title="Stylefind v1.0 Wireframes - Sign up flow 3" target="_blank">3</a>
                 <br>
                 Wireframes - <a href="_img/stylefind_v2/stylefind_v2-app_flow.png" title="Stylefind v1.0 Wireframe - App flow" target="_blank">App flow</a>
                 <br>
-                Framer - <a href="_img/stylefind_v2/stylefind_v2-framer-signup.mp4" title="Stylefind v1.0 Framer - Sign up animations" target="_blank">Sign up animations</a>
+                Framer.js - Results Swipe: <!--a href="_img/stylefind_v2/stylefind_v2-framer-signup.mp4" title="Stylefind v1.0 Framer - Sign up animations" target="_blank">Movie</a--> <a href="_framer/sf-results/index.html">Interactive</a>
                 <br>
-                Framer - <a href="_img/stylefind_v2/stylefind_v2-framer-results.mp4" title="Stylefind v1.0 Framer - Results animations" target="_blank">Results interactions</a>
+                Framer.js - Sign up: <a href="_img/stylefind_v2/stylefind-sign-up-flow.mov" title="Stylefind v1.0 Framer - Sign up animations" target="_blank">.mov</a>
               </div>
               <div id="prj11_s2_info" class="slide_info">
-                <strong>The Problem</strong><br><br>
-                <p>I was contracted by <a href="http://slyce.it" target="_blank" title="Open slyce.it in a new tab/window">Slyce Inc.</a> to design and build a consumer app for iOS that leveraged their visual search technology.</p>
-                <p>The goal was to create an app that would showcase this technology in a very favorable light. Using the provided APIs, I needed to enable people to get purchaseable results from the images they submitted. Ultimately, the app would be used by Slyce to demonstrate to retailers and investors the power and accuracy of their visual search magic.</p>
+                <strong>Backstory</strong><br><br>
+                <p>After the Slyce Demo app was delivered (See the Slyce Demo project below) and the glowing feedback was coming in, we decided to spin Stylefind off into its own company.</p>
+                <p>We felt that we had an opportunity to create a more engaging experience for a more public consumer audience based on the positive feedback we were receiving. And, with that, I started my research to learn more about the market and the problem we would be trying to solve.</p>
               </div>
               <div id="prj11_s3_info" class="slide_info">
-                <strong>The Solution</strong><br><br>
-                <p>After talking with the stakeholders at Slyce, it was apparent that speed and accuracy were critical to the app's success. In order to showcase the powerful technology Slyce offers, I needed strip away all but the essential features that would enable people to quickly submit an image and get purchasable results back within seconds.</p>
-                <p>I felt that "perceived" speed would play a key role and should be a focal point during the design and development of the app. Things like starting image uploads early would go a long way in making the app feel faster.</p>
+                <strong>Research</strong><br><br>
+                <p>After some market research to determine who I should be talking to, I conducted customer development interviews with 12 qualified candidates - hoping to learn more about the fashion discovery and mobile shopping problems they faced.</p>
+                <p>There were a few common themes: results should come from retailers with exceptional shipping and return policies only, people want to be notified if something they want goes on sale, and being able to search for items with an image would be extremely helpful.</p>
               </div>
               <div id="prj11_s4_info" class="slide_info">
                 <strong>Behind the Scenes</strong><br><br>
-                <p>I began by wireframing the required views for the app and outlining the user's flow through the app.</p>
-                <p></p>
+                <p>Once I had a list of features for an MVP, I began by sketching and then wireframing the required views for the app.</p>
+                <p>I tried to adhere to a few principles: allow people to see value before signing up, only ask for info that's absolutely required to continue through the app, and don't make people enter the same info more than once.</p>
+                <p>After getting feedback on the wires, I created mockups and a few of the key animations in Framer.js before soliciting another round of feedback.</p>
               </div>
               <div id="prj11_s5_info" class="slide_info">
-                <strong>Prototyping</strong>
-                <p></p>
+                <strong>Measuring</strong><br><br>
+                <p>We're still in development, but there are a number of metrics we'll want to be paying attention to when we launch, from both a UX perspective and a business perspective. On the UX side, I'll be using the <a href="http://static.googleusercontent.com/media/research.google.com/en//pubs/archive/36299.pdf" title="Measuring the User Experience on a Large Scale: User-Centered Metrics for Web Applications">HEART framework</a> to measure the quality of our UX. Specifically I'll be paying attention to Retention and Engagment (i.e. # of images submitted per user per month).</p>
               </div>
             </div>
             <div class="tags">
@@ -162,7 +163,7 @@
               <div id="prj10_s1_info" class="slide_info">
                 <em>"Find and buy items you love, quickly and easily."</em>
                 <br><br>
-                <p>Stylefind is an app that enables people to find where to buy the items they love by submitting a images.</p>
+                <p>Stylefind is an app that enables people to find where to buy the items they love by submitting images.</p>
                 <p>Using visual search and image recognition technology, Stylefind provides visually similar, purchaseable results to users based on the images they submit</p>
 
                 <a href="_img/stylefind_v1/stylefind_v1-flow.png" title="Stylefind v1.0 Wireframes" target="_blank">Wireframes</a>
@@ -174,16 +175,16 @@
               </div>
               <div id="prj10_s3_info" class="slide_info">
                 <strong>Research & Hypothesis</strong><br><br>
-                <p>After talking with the stakeholders at Slyce, it was apparent that speed and accuracy were critical to the app's success. In order to showcase the powerful technology Slyce offers, we needed to enable people to easily submit an image and get purchasable results back quickly, in a simple and frictionless way. I knew that perceived speed would need to be a focal point during the design and development of the app. Starting image uploads as early as possible and other slight of hand like tricks would go a long way in making the app feel faster.</p>
+                <p>After talking with the stakeholders at Slyce, it was apparent that speed and accuracy were critical to the app's success. In order to showcase the powerful technology Slyce offers, we needed to enable people to easily submit an image and get purchasable results back quickly, in a simple and frictionless way. I knew that perceived speed would need to be a focal point during the design and development of the app. Starting image uploads as early as possible and other sleight of hand like tricks would go a long way in making the app feel faster.</p>
               </div>
               <div id="prj10_s4_info" class="slide_info">
                 <strong>Behind the Scenes</strong><br><br>
-                <p>I began by wireframing the required views for the app to outline the user's flow through the app. During this process it became clear that enabling people to filter results, or select a category before uploading their image, didn't address the goal of the project. While these features seemed to offer a better overall experience, neither helped to showcase the speed or accuracy of the results Slyce could procide.</p>
+                <p>I began by wireframing the required views for the app to outline the user's flow through the app. During this process it became clear that enabling people to filter results, or select a category before uploading their image, didn't address the goal of the project. While these features seemed to offer a better overall experience, neither helped to showcase the speed or accuracy of the results Slyce could produce.</p>
                 Wireframes - <a href="_img/stylefind_v1/stylefind_v1-flow.png" title="Stylefind v1.0 Wireframes" target="_blank">Demo app flow</a>
               </div>
               <div id="prj10_s5_info" class="slide_info">
                 <strong>Solution</strong><br><br>
-                <p>After a few iterations to tweak how we displayed feedback to the user when their image was uploading, how the results were displayed and how soon the user would be sent to the checkout webview (i.e. removing the result info view), we arrived at our finished product - the Stylefind prototype, so to speak.</p>
+                <p>After a few iterations to tweak how we displayed feedback to the user when their image was uploading, how the results were displayed and how soon the user would be sent to the checkout web view (i.e. removing the result info view), we arrived at our finished product - the Stylefind prototype, so to speak.</p>
                 <p>The final app was such a hit with Slyce that we decided to spin it off into is own company to create a full consumer app experience that harnesses the power of Slyce.</p>
               </div>
             </div>
@@ -243,6 +244,8 @@
                 <em>"With Payments by Wave you can easily accept credit and cash payments on your iOS device and have each transaction flow seamlessly into Wave's small business cloud accounting app."</em>
                 <br><br>
                 <p>Payments by Wave is a credit card &amp; cash payments app for iOS.</p>
+                <a href="_img/payments/payments-wires.pdf" title="Payments by Wave - Initial Wireframes" target="_blank">Wireframes</a>
+                <br>
                 <a href="https://itunes.apple.com/ca/app/payments-by-wave/id666409748?mt=8" title="iTunes - Payments by Wave" target="_blank">iTunes</a>
                 <br>
                 <a href="https://www.waveapps.com/payments/" title="waveapps.com/payments" target="_blank">Wave</a>
