Updated Framer links in the Stylefind project

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
                 <br>
                 Wireframes - <a href="_img/stylefind_v2/stylefind_v2-app_flow.png" title="Stylefind v1.0 Wireframe - App flow" target="_blank">App flow</a>
                 <br>
-                Framer.js - Results Swipe: <!--a href="_img/stylefind_v2/stylefind_v2-framer-signup.mp4" title="Stylefind v1.0 Framer - Sign up animations" target="_blank">Movie</a--> <a href="_framer/sf-results/index.html">Interactive</a>
+                Framer.js - Results Swipe: <!--a href="_img/stylefind_v2/stylefind_v2-framer-signup.mp4" title="Stylefind v1.0 Framer - Sign up animations" target="_blank">Movie</a--> <a href="_framer/sf-results/index.html" title="Stylefind - Result Swiping interaction (Framer.js)" target="_blank">Interactive</a>
                 <br>
-                Framer.js - Sign up: <a href="_img/stylefind_v2/stylefind-sign-up-flow.mov" title="Stylefind v1.0 Framer - Sign up animations" target="_blank">.mov</a>
+                Framer.js - Sign up: <a href="_img/stylefind_v2/stylefind-sign-up-flow.mov" title="Stylefind - Sign up interactions" target="_blank">.Mov</a>
               </div>
               <div id="prj11_s2_info" class="slide_info">
                 <strong>Backstory</strong><br><br>
