--- a/cv.html
+++ b/cv.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>scottcormier.com - Portfolio</title>
+  <title>scottcormier.com - Curriculum Vitæ</title>
   <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
@@ -29,8 +29,8 @@
 </head>
 <body>
   <header id="masthead">
-    <h1>I'm <a href="http://work.scottcormier.com" title="work.scottcormier.com">Scott Cormier</a>, <span id="tagline">a UX &amp; Product designer</span></h1>
-    <div class="title">I'm <a href="work.scottcormier.com">Scott Cormier</a>, <span id="tagline2">an interface designer</span></div>
+    <h1>I'm <a href="http://work.scottcormier.com" title="work.scottcormier.com">Scott Cormier</a>, <span id="tagline">a Product leader</span></h1>
+    <div class="title">I'm <a href="work.scottcormier.com">Scott Cormier</a>, <span id="tagline2">a Product, Design, and Growth leader</span></div>
     <nav>
       <ul>
         <li><a href="/" title="Work">Work</a></li>
@@ -69,16 +69,13 @@
         </article>
         <article class="cv">
           <h2 class="cv">Overview</h2>
-          <p>UX and Product Designer with 7+ years experience creating functional and innovative mobile and web apps. Currently, the Product Manager of Mobile at <a href="http://waveapps.com/" target="_blank">Wave</a>. I’m passionate about design, the intersection of technology and society, and products that make a positive, lasting impact.</p>
+          <p>I love problems. I love learning about them, thinking about them, generating hypotheses on how to solve them, and running experiments to test those hypotheses. I love learning how people interact with the solutions to these problems and seeing how they're helped by them.</p>
+          <p>I'm an outcome-driven product leader who helps early-stage startups get to product-market fit and grow their businesses through strong strategic thinking, design, and consumer science skills.</p>
         </article>
         <article class="cv">
           <h2>Skills</h2>
           <h3>Expertise:</h3>
-          <p>Product Design, Product Strategy, User Experience, Interaction Design, Interface Design, Usability</p>
-          <h3>Methods:</h3>
-          <p>User Research, Design Leadership, Wireframes, Personas, Prototypes, Usability Testing</p>
-          <h3>Tools:</h3>
-          <p>Sketching, Illustrator, Photoshop, OmniGraffle, HTML5/CSS3, JavaScript</p>
+          <p>Product Strategy, Product Growth, Product Design, User Experience, Behavioural Analytics, Product Marketing</p>
         </article>
         <article class="cv">
           <h2>Experience</h2>
