Updated Overview and removed Contact me section

--- a/index.html
+++ b/index.html
@@ -29,13 +29,12 @@
 </head>
 <body>
   <header id="masthead">
-    <h1>I'm <a href="http://work.scottcormier.com" title="work.scottcormier.com">Scott Cormier</a>, <span id="tagline">a UX and Product Designer.</span></h1>
-    <div class="title">I'm <a href="http://work.scottcormier.com" title="work.scottcormier.com">Scott Cormier</a>,
-      <span id="tagline2">an interface designer.</span></div>
+    <h1>I'm <a href="http://work.scottcormier.com" title="work.scottcormier.com">Scott Cormier</a>, <span id="tagline">a Product leader</span></h1>
+    <div class="title">I'm <a href="work.scottcormier.com">Scott Cormier</a>, <span id="tagline2">a Product, Design, and Growth leader</span></div>
     <nav>
       <ul>
-        <li class="active"><a href="/" title="Work">Work</a></li>
-        <li><a href="/cv.html" title="Resume">Resume</a></li>
+        <li><a href="/" title="Work">Work</a></li>
+        <li class="active"><a href="/stage/cv" title="Resume">Resume</a></li>
         <li><a href="http://twitter.com/scormier" target="_blank" title="Follow me on Twitter">Twitter</a></li>
       </ul>
     </nav>
@@ -46,7 +45,8 @@
         <p class="intro">Although this site is mobile optimized, I'd recommend viewing it on a desktop for the best experience.</p>
 
         <article class="cv">
-          <p>UX and Product Designer with 7+ years experience creating mobile and web apps. Currently, I'm a co-founder of a (very) early stage company called <a href="http://stylefind.io/" target="_blank" title="Open stylefind.io in a new tab/window">Stylefind</a>. Previously I've worked at <a href="http://chaordix.com/" target="_blank" title="Open chaordix.com in a new tab/window">Chaordix</a> as a UX Designer & Product Manager, and <a href="http://waveapps.com/" target="_blank" title="Open waveapps.com in a new tab/window">Wave</a>, where I was the Product Designer & Manager of Mobile. I’m passionate about finding and solving problems by creating products that make a positive, lasting impact.</p>
+          <p>I love problems. I love learning about them, thinking about them, generating hypotheses on how to solve them, and running experiments to test those hypotheses. I love learning how people interact with the solutions to these problems and seeing how they're helped by them.</p>
+          <p>I'm an outcome-driven product leader who helps early-stage startups get to product-market fit and grow their businesses through strong strategic thinking, design, and consumer science skills.</p>
         </article>
 
         <article><!-- Stylefind v1.0 (iOS) -->
@@ -877,28 +877,6 @@
               </ul>
             </div>
           </div>
-        </article>
-        <article class="web contact cv"><!-- Contact Me -->
-          <!-- Begin MailChimp Signup Form -->
-          <div id="mc_embed_signup">
-            <form action="http://kwerk.us4.list-manage1.com/subscribe/post?u=8c1ae85d386c00a242bdc8690&amp;id=bf645f64a4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-              <h2>Questions?</h2>
-              <div class="mc-field-group">
-                <input type="email" value="" placeholder="email" name="EMAIL" class="required email" id="mce-EMAIL">
-              </div>
-              <div class="mc-field-group">
-                <textarea type="text" value="" placeholder="message..." name="MMERGE3" class="required" id="mce-MMERGE3"></textarea>
-              </div>
-              <div id="mce-responses" class="clear">
-                <div class="response" id="mce-error-response" style="display:none"></div>
-                <div class="response" id="mce-success-response" style="display:none"></div>
-              </div>
-              <div class="clear">
-                <input type="submit" value="Contact me" name="subscribe" id="mc-embedded-subscribe" class="button">
-              </div>
-            </form>
-          </div>
-          <!--End mc_embed_signup-->
         </article>
       </div>
     </div>
