Updated Overview and removed Contact me section

--- a/index.html
+++ b/index.html
@@ -887,10 +887,7 @@
     <p>Copyright © 1980-2013</p>
   </footer>
 
-  <script src="https://www.google.com/jsapi?key=ABQIAAAA_il1TRM5dInT9TwCZOJVCBTXsBezwwCOedBrfLJwMdtGsZKFWBTi4l8tA8B7m-bMRVWaULIvk84t9A"></script>
-  <script type="text/javascript">
-    google.load("jquery", "1");
-  </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="_js/script.js"></script>
   <!-- asynchronous google analytics: mathiasbynens.be/notes/async-analytics-snippet  -->
   <script>
