Updated link to jquery, replaced GA with Tag Manager, and fixed typekit

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>scottcormier.com - Portfolio</title>
+  <title>scottcormier.com - Work</title>
   <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
@@ -15,19 +15,25 @@
   <link rel="apple-touch-icon" href="{PortraitURL-128}">
   <link rel="alternate" type="application/rss+xml" href="{RSS}">
 
+  <link rel="stylesheet" href="https://use.typekit.net/cpr7cwp.css">
   <link rel="stylesheet" href="_css/style.css" type="text/css" media="screen" />
+
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-5ZJRPVT');</script>
+  <!-- End Google Tag Manager -->
   <script src="_js/modernizr-2.0.6.js"></script>
-  <script type="text/javascript">
-    (function() {
-      var config = {
-        kitId: 'cpr7cwp',
-        scriptTimeout: 3000
-      };
-      var h=document.getElementsByTagName("html")[0];h.className+=" wf-loading";var t=setTimeout(function(){h.className=h.className.replace(/(\s|^)wf-loading(\s|$)/g," ");h.className+=" wf-inactive"},config.scriptTimeout);var tk=document.createElement("script"),d=false;tk.src='//use.typekit.net/'+config.kitId+'.js';tk.type="text/javascript";tk.async="true";tk.onload=tk.onreadystatechange=function(){var a=this.readyState;if(d||a&&a!="complete"&&a!="loaded")return;d=true;clearTimeout(t);try{Typekit.load(config)}catch(b){}};var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(tk,s)
-    })();
-  </script>
+
 </head>
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5ZJRPVT"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
   <header id="masthead">
     <h1>I'm <a href="http://work.scottcormier.com" title="work.scottcormier.com">Scott Cormier</a>, <span id="tagline">a Product leader</span></h1>
     <div class="title">I'm <a href="work.scottcormier.com">Scott Cormier</a>, <span id="tagline2">a Product, Design, and Growth leader</span></div>
@@ -889,22 +895,5 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="_js/script.js"></script>
-  <!-- asynchronous google analytics: mathiasbynens.be/notes/async-analytics-snippet  -->
-  <script>
-    (function(window, document, variableName, scriptElement, firstScript) {
-      window['GoogleAnalyticsObject'] = variableName;
-      window[variableName] || (window[variableName] = function() {
-        (window[variableName].q = window[variableName].q || []).push(arguments)
-      });
-      window[variableName].l = +new Date;
-      scriptElement = document.createElement('script'),
-      firstScript = document.scripts[0];
-      scriptElement.src = '//www.google-analytics.com/analytics.js';
-      firstScript.parentNode.insertBefore(scriptElement, firstScript)
-    }(window, document, 'ga'));
-
-    ga('create', 'UA-26312391-2');
-    ga('send', 'pageview');
-</script>
 </body>
 </html>
