Updated cv with new experience, hid all work on index, and more

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <div class="title">I'm <a href="work.scottcormier.com">Scott Cormier</a>, <span id="tagline2">a Product, Design, and Growth leader</span></div>
     <nav>
       <ul>
-        <li><a href="/" title="Work">Work</a></li>
-        <li class="active"><a href="/stage/cv" title="Resume">Resume</a></li>
+        <li class="active"><a href="/" title="Work">Work</a></li>
+        <li><a href="/cv" title="Resume">Resume</a></li>
         <li><a href="http://twitter.com/scormier" target="_blank" title="Follow me on Twitter">Twitter</a></li>
       </ul>
     </nav>
@@ -55,7 +55,12 @@
           <p>I'm an outcome-driven product leader who helps early-stage startups get to product-market fit and grow their businesses through strong strategic thinking, design, and consumer science skills.</p>
         </article>
 
-        <article><!-- Stylefind v1.0 (iOS) -->
+        <a href="#" id="past_work" class="secondary" title="View past work">View past work</a>
+        <article class="cv past">
+          <p class="summary">WARNING: The following work is dated. Please judge accordingly.</p>
+        </article>
+
+        <article class="web past"><!-- Stylefind v1.0 (iOS) -->
           <div id="project_11" class="images">
             <ul class="slides">
               <li>
@@ -132,7 +137,7 @@
             </div>
           </div>
         </article>
-        <article><!-- Stylefind v0.25 (iOS) -->
+        <article class="web past"><!-- Stylefind v0.25 (iOS) -->
           <div id="project_10" class="images">
             <ul class="slides">
               <li>
@@ -202,7 +207,7 @@
             </div>
           </div>
         </article>
-        <article><!-- Payments by Wave (iOS) -->
+        <article class="web past"><!-- Payments by Wave (iOS) -->
           <div id="project_9" class="images">
             <ul class="slides">
               <li>
@@ -298,7 +303,7 @@
         </article>
         <!-- Receipts by Wave (Android) - On-boarding -->
         <!--
-        <article>
+        <article class="web past">
           <div id="project_10" class="images">
             <ul class="slides">
               <li>
@@ -373,7 +378,7 @@
           </div>
         </article>
         -->
-        <article><!-- Receipts by Wave (Android) -->
+        <article class="web past"><!-- Receipts by Wave (Android) -->
           <div id="project_8" class="images">
             <ul class="slides">
               <li>
@@ -454,7 +459,7 @@
             </div>
           </div>
         </article>
-        <article><!-- Receipts by Wave (iOS) -->
+        <article class="web past"><!-- Receipts by Wave (iOS) -->
           <div id="project_7" class="images">
             <ul class="slides">
               <li>
@@ -552,7 +557,7 @@
             </div>
           </div>
         </article>
-        <article><!-- Payroll by Wave (iOS) -->
+        <article class="web past"><!-- Payroll by Wave (iOS) -->
           <div id="project_6" class="images">
             <ul class="slides">
               <li>
@@ -621,11 +626,6 @@
               </ul>
             </div>
           </div>
-        </article>
-
-        <a href="#" id="past_work" class="secondary" title="View past work">View past work</a>
-        <article class="cv past">
-          <p class="summary">WARNING: The following work is from 2011 and older. Please judge accordingly.</p>
         </article>
 
         <article class="web past"><!-- ScottCormier.com -->
