Updated cv header nav link

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <nav>
       <ul>
         <li class="active"><a href="/" title="Work">Work</a></li>
-        <li><a href="/cv" title="Resume">Resume</a></li>
+        <li><a href="/cv.html" title="Resume">Resume</a></li>
         <li><a href="http://twitter.com/scormier" target="_blank" title="Follow me on Twitter">Twitter</a></li>
       </ul>
     </nav>
