Updated Brightside experience with better grammar

--- a/cv.html
+++ b/cv.html
@@ -82,7 +82,7 @@
           <section><!-- Growth Lead - Brightside -->
             <h3>Growth Lead | <a href="http://hibrightside.ca" title="Brightside">Brightside</a></h3>
             <p><em>Apr 2019 - Present</em></p>
-            <p>Understanding how Brightside grows, designed and developed a growth strategy to achieve business goals on a path toward product-market fit. Implemented the tools and practices that will enable Brightside to measure their progress towards p/m fit and to optimize the product when it's time to grow.</p>
+            <p>Worked to understand how Brightside grows, designed and developed a growth strategy to achieve business goals on a path toward product-market fit. Implemented the tools and practices that will enable Brightside to measure their progress towards p/m fit and to optimize the product when it's time to grow.</p>
           </section>
           <section><!-- Product Manager - Brightside -->
             <h3>Sr. Product Manager | <a href="http://hibrightside.ca" title="Brightside">Brightside</a></h3>
